DTSSTCI-357: Address dev review comments